Restore TOP Legacy Leaderboard

--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -33,7 +33,7 @@
           <a href="{{ url_for('gallery') }}" class="nav-link">Gallery</a>
         </li>
         <li class="nav-item">
-          <a href="{{ url_for('odinstudygroup') }}" class="nav-link">The Odin Project Study Group</a>
+          <a href="{{ url_for('odinstudygroup') }}" class="nav-link">The Odin Project Journey</a>
         </li>
         <li class="nav-item">
           <a href="{{ url_for('newsletter') }}" class="nav-link">Newsletter</a>
