--- a/templates/odinstudygroup.html
+++ b/templates/odinstudygroup.html
@@ -2,16 +2,17 @@
 
 <div class="text-center">
   <h6></h6>
+  <br/>
   <img
     src="{{ url_for('static', filename='img/Odin.png') }}"
-    width="500px"
+    width="400px"
     class="mb-2 img-fluid"
   />
 </div>
 
 <div class="text-center">
   <h1>
-    The Odin Project Study Group
+    The Odin Project Journey
   </h1>
 </div>
 <p style="margin: 30px;"></p>
