--- a/templates/odinstudygroupupdate.html
+++ b/templates/odinstudygroupupdate.html
@@ -3,7 +3,7 @@
 <section>
   <div class="col-lg-12 text-center mt-15">
       <h1 class="display-4 mt-5 pt-3 top-spacing" style="font-family:Montserrat;">
-        The Odin Project Study Group
+        The Odin Project Journey
       </h1>
   </div>
 </section>
